# Wen-El-Coaster-POC

./: .gitignore  POC.md  README.md  deploy.sh  main.py  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: coasters.py  eta.py  reports.py  routes.py
backend/app/data/routes/: README.md
backend/app/data/traces/: README.md
backend/app/db/: schema.sql  seed.sql
backend/app/ml/: features.py  model.pkl.placeholder  train.py
backend/app/models/: coaster.py  report.py  route.py
backend/app/services/: eta_predictor.py  nearest.py  on_route.py
frontend/: App.tsx  app.json  package-lock.json  package.json
frontend/src/components/: AppHeader.tsx  ETABanner.tsx  LanguageToggle.tsx  NearestStopButton.tsx  ReportFab.tsx  RouteDropdown.tsx  SimControls.tsx  SuggestStopFab.tsx
frontend/src/components/Map/: Map.native.tsx  Map.web.tsx  types.ts
frontend/src/data/: mockCoasters.ts  routes.ts
frontend/src/hooks/: useCoasters.ts  useCustomStops.ts  useUserLocation.ts
frontend/src/i18n/: I18nContext.tsx  translations.ts
frontend/src/screens/: HomeScreen.tsx  ReportScreen.tsx
frontend/src/services/: api.ts  eta.ts  location.ts
frontend/src/theme/: colors.ts
frontend/src/types/: index.ts
frontend/src/utils/: geo.ts
